--- a/package.json
+++ b/package.json
@@ -14,10 +14,12 @@
     "axios": "^1.7.2",
     "bootstrap": "^5.3.3",
     "leaflet": "^1.9.4",
+    "moment": "^2.30.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.2.1",
     "react-leaflet": "^4.2.1",
+    "react-paginate": "^8.2.0",
     "react-redux": "^9.1.2"
   },
   "devDependencies": {
